preliminary markup in the index.html was added

--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,189 @@
 <!DOCTYPE html>
-<html>
-    <head></head>
-    <body></body>
+<html lang="eng">
+    <head>
+        <meta charset="utf-8">
+        <title>Waxom. Portfolio PSD Template</title>
+    </head>
+    <body>
+        <header class="page-header">
+            <div class="logo">
+                <a href="#"></a>
+                <div class="logo__trademark"></div>
+            </div>
+            <ul class="menu">
+                <li class="menu__item">
+                    <a href="#">Home</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#">About Us</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#">Portfolio</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#">Features</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#">Blog</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#">Pricing</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#">Shortcodes</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#">Contact</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" aria-label="Cart"></a>
+                </li>
+                <li class="menu__item">
+                    <a href="#" aria-label="Search"></a>
+                </li>
+            </ul>
+            <div class="sample"></div>
+        </header>
+        <section class="features">
+            <ul>
+                <li class="features__item"></li>
+                <li class="features__item"></li>
+                <li class="features__item"></li>
+                <li class="features__item"></li>
+            </ul>
+        </section>
+        <section class="slider">
+            <div class="slider__header">
+                <h1 class="slider__header-title">Waxom is Realization of your Ideas.</h1>
+                <p class="slider__header-text">
+                    Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. 
+                    Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
+                </p>
+            </div>
+            <div class="slider__item"></div>
+            <div class="slider__item"></div>
+            <div class="slider__item"></div>
+            <div class="slider__footer">
+                <h2 class="slider__footer-title">Waxom Multipurpose WordPress Theme</h2>
+                <p class="slider__footer-text"> 
+                    Don't Forget to Rate the Template. Thanks so much!
+                </p>
+                <a class="button" href="#">Purchase Now</a>
+            </div>
+        </section>
+        <section class="projects">
+            <div class="projects__header">
+                <h1 class="projects__header-title">Our Latest Projects.</h1>
+                <p class="projects__header-text">
+                        Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. 
+                        Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
+                </p>
+            </div>
+            <div class="category">
+                <div class="category-item">All</div>
+                <div class="category-item">Web Design</div>
+                <div class="category-item">Mobile App</div>
+                <div class="category-item">Illustration</div>
+                <div class="category-item">Photography</div>
+            </div>
+            <div class="projects__item"></div>
+            <div class="projects__item"></div>
+            <div class="projects__item"></div>
+            <div class="projects__item"></div>
+            <div class="projects__item"></div>
+            <div class="projects__item"></div>
+            <div class="button">Load More</div>
+        </section>
+        <section class="promo">
+            <div class="promo__description">
+                <h1 class="description__title">Waxom Video Presentation</h1>
+                <p class="description__text">
+                    Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius, 
+                    qui sequitur mutationem consuetudium.
+                </p>
+            </div>
+        </section>
+        <section class="mobile">
+            <h1 class="mobile__title">Excellent for Mobile Devices.</h1>
+            <div class="mobile__text">
+                <p>
+                    Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper 
+                    suscipit lobortis nisl ut aliquip ex ea commodo consequat. Investigationes 
+                    demonstraverunt lectores legere me lius quod ii legunt saepius claritas. 
+                    Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
+                </p>
+            </div>
+            <ul class="mobile__list">
+                <li class="mobile__list-item">
+                    Nam liber tempor cum soluta nobis eleifend option;
+                </li>
+                <li class="mobile__list-item">
+                    Option congue nihil imperdiet doming id quod mazim placerat facer;
+                </li>
+                <li class="mobile__list-item">
+                    Eodem modo typi, qui nunc nobis videntur parum futurum;
+                </li>
+                <li class="mobile__list-item">
+                    Investigationes demonstraverunt lectores
+                </li>
+            </ul>
+            <div class="mobile__image"></div>
+        </section>
+        <section class="statistics">
+            <div class="statistics__item"></div>
+            <div class="statistics__item"></div>
+            <div class="statistics__item"></div>
+            <div class="statistics__item"></div>
+            <div class="statistics__item"></div>
+        </section>
+        <section class="recent">
+            <div class="recent__header">
+                <h1 class="recent__header-title">Recent Posts.</h1>
+                <p class="recent__header-text">
+                        Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. 
+                        Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
+                </p>
+            </div>
+            <div class="recent__post"></div>
+            <div class="recent__post"></div>
+            <div class="recent__post"></div>
+        </section>
+        <section class="clients">
+            <div class="clients__logo"></div>
+            <div class="clients__logo"></div>
+            <div class="clients__logo"></div>
+            <div class="clients__logo"></div>
+        </section>
+        <section class="social">
+            <div class="logo"></div>
+            <div class="description"></div>
+            <div class="posts"></div>
+            <div class="twitter"></div>
+            <div class="widget"></div>
+        </section>
+        <footer class="page-footer">
+            <ul class="copyright">
+                <li>
+                    <a href="#" class="copyright__link">Copyright © 2015 Waxom</a>
+                </li>
+                <li>
+                    <a href="#" class="copyright__link"> Privacy Policy</a>
+                </li>
+                <li>
+                    <a href="#" class="copyright__link">FAQ</a>
+                </li>
+                <li>
+                    <a href="#" class="copyright__link">Support</a>
+                </li>
+            </ul>
+            <ul class="design">
+                <li class="design__item">
+                    Designed by ThemeFire
+                </li>
+                <li class="design__item">
+                    Only on Envato Market
+                </li>
+            </ul>
+        </footer>
+    </body>
 </html>
