section tags was changed into div, package.json file was added

--- a/source/index.html
+++ b/source/index.html
@@ -44,15 +44,15 @@
             </ul>
             <div class="sample"></div>
         </header>
-        <section class="features">
+        <div class="features">
             <ul>
                 <li class="features__item"></li>
                 <li class="features__item"></li>
                 <li class="features__item"></li>
                 <li class="features__item"></li>
             </ul>
-        </section>
-        <section class="slider">
+        </div>
+        <div class="slider">
             <div class="slider__header">
                 <h1 class="slider__header-title">Waxom is Realization of your Ideas.</h1>
                 <p class="slider__header-text">
@@ -70,8 +70,8 @@
                 </p>
                 <a class="button" href="#">Purchase Now</a>
             </div>
-        </section>
-        <section class="projects">
+        </div>
+        <div class="projects">
             <div class="projects__header">
                 <h1 class="projects__header-title">Our Latest Projects.</h1>
                 <p class="projects__header-text">
@@ -93,8 +93,8 @@
             <div class="projects__item"></div>
             <div class="projects__item"></div>
             <div class="button">Load More</div>
-        </section>
-        <section class="promo">
+        </div>
+        <div class="promo">
             <div class="promo__description">
                 <h1 class="description__title">Waxom Video Presentation</h1>
                 <p class="description__text">
@@ -102,8 +102,8 @@
                     qui sequitur mutationem consuetudium.
                 </p>
             </div>
-        </section>
-        <section class="mobile">
+        </div>
+        <div class="mobile">
             <h1 class="mobile__title">Excellent for Mobile Devices.</h1>
             <div class="mobile__text">
                 <p>
@@ -128,15 +128,15 @@
                 </li>
             </ul>
             <div class="mobile__image"></div>
-        </section>
-        <section class="statistics">
+        </div>
+        <div class="statistics">
             <div class="statistics__item"></div>
             <div class="statistics__item"></div>
             <div class="statistics__item"></div>
             <div class="statistics__item"></div>
             <div class="statistics__item"></div>
-        </section>
-        <section class="recent">
+        </div>
+        <div class="recent">
             <div class="recent__header">
                 <h1 class="recent__header-title">Recent Posts.</h1>
                 <p class="recent__header-text">
@@ -147,20 +147,20 @@
             <div class="recent__post"></div>
             <div class="recent__post"></div>
             <div class="recent__post"></div>
-        </section>
-        <section class="clients">
+        </div>
+        <div class="clients">
             <div class="clients__logo"></div>
             <div class="clients__logo"></div>
             <div class="clients__logo"></div>
             <div class="clients__logo"></div>
-        </section>
-        <section class="social">
+        </div>
+        <div class="social">
             <div class="logo"></div>
             <div class="description"></div>
             <div class="posts"></div>
             <div class="twitter"></div>
             <div class="widget"></div>
-        </section>
+        </div>
         <footer class="page-footer">
             <ul class="copyright">
                 <li>
