--- a/source/index.html
+++ b/source/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Waxom. Portfolio PSD Template</title>
-        <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
-        <link rel="stylesheet" href="/node_modules/normalize.css/normalize.css">
+        <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="/normalize.css/normalize.css">
     </head>
     <body>
         <header class="page-header">
