text was arranged with web typography

--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
                     <a href="#">Home</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#">About Us</a>
+                    <a href="#">About&nbsp;Us</a>
                 </li>
                 <li class="menu__item">
                     <a href="#">Portfolio</a>
@@ -45,7 +45,14 @@
                     <a href="#" aria-label="Search"></a>
                 </li>
             </ul>
-            <div class="sample"></div>
+            <div class="sample">
+                <h1 class="sample__title">Portfolio PSD Template</h1>
+                <h2 class="sample__tagline">Unique and Modern Design</h2>
+                <p class="sample__text">
+                    Nam liber tempor cum soluta nobis eleifend option congue nihil 
+                    imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
+                </p>
+            </div>
         </header>
         <div class="features">
             <ul>
@@ -57,10 +64,10 @@
         </div>
         <div class="slider">
             <div class="slider__header">
-                <h1 class="slider__header-title">Waxom is Realization of your Ideas.</h1>
+                <h1 class="slider__header-title">Waxom is&nbsp;Realization of&nbsp;your Ideas.</h1>
                 <p class="slider__header-text">
-                    Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. 
-                    Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
+                    IInvestigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt 
+                    saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
                 </p>
             </div>
             <div class="slider__item"></div>
@@ -69,7 +76,7 @@
             <div class="slider__footer">
                 <h2 class="slider__footer-title">Waxom Multipurpose WordPress Theme</h2>
                 <p class="slider__footer-text"> 
-                    Don't Forget to Rate the Template. Thanks so much!
+                    Don&rsquo;t Forget to&nbsp;Rate the Template. Thanks so&nbsp;much!
                 </p>
                 <a class="button" href="#">Purchase Now</a>
             </div>
@@ -78,8 +85,8 @@
             <div class="projects__header">
                 <h1 class="projects__header-title">Our Latest Projects.</h1>
                 <p class="projects__header-text">
-                        Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. 
-                        Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
+                    Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt 
+                    saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
                 </p>
             </div>
             <div class="category">
@@ -101,8 +108,8 @@
             <div class="promo__description">
                 <h1 class="description__title">Waxom Video Presentation</h1>
                 <p class="description__text">
-                    Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius, 
-                    qui sequitur mutationem consuetudium.
+                    Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt 
+                    saepius, qui sequitur mutationem consuetudium.
                 </p>
             </div>
         </div>
@@ -110,10 +117,11 @@
             <h1 class="mobile__title">Excellent for Mobile Devices.</h1>
             <div class="mobile__text">
                 <p>
-                    Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper 
-                    suscipit lobortis nisl ut aliquip ex ea commodo consequat. Investigationes 
-                    demonstraverunt lectores legere me lius quod ii legunt saepius claritas. 
-                    Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.
+                    Qisi enim ad&nbsp;minim veniam, quis nostrud exerci tation ullamcorper 
+                    suscipit lobortis nisl ut&nbsp;aliquip ex&nbsp;ea&nbsp;commodo consequat. 
+                    Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt 
+                    saepius claritas. Eodem modo typi, qui nunc nobis videntur parum clari, 
+                    fiant sollemnes in&nbsp;futurum.
                 </p>
             </div>
             <ul class="mobile__list">
@@ -121,7 +129,7 @@
                     Nam liber tempor cum soluta nobis eleifend option;
                 </li>
                 <li class="mobile__list-item">
-                    Option congue nihil imperdiet doming id quod mazim placerat facer;
+                    Option congue nihil imperdiet doming id&nbsp;quod mazim placerat facer;
                 </li>
                 <li class="mobile__list-item">
                     Eodem modo typi, qui nunc nobis videntur parum futurum;
@@ -143,9 +151,8 @@
             <div class="recent__header">
                 <h1 class="recent__header-title">Recent Posts.</h1>
                 <p class="recent__header-text">
-                        Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. 
-                        Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
-                </p>
+                    Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt 
+                    saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
             </div>
             <div class="recent__post"></div>
             <div class="recent__post"></div>
@@ -167,7 +174,7 @@
         <footer class="page-footer">
             <ul class="copyright">
                 <li>
-                    <a href="#" class="copyright__link">Copyright © 2015 Waxom</a>
+                    <a href="#" class="copyright__link">Copyright &copy;&nbsp;2015 Waxom</a>
                 </li>
                 <li>
                     <a href="#" class="copyright__link"> Privacy Policy</a>
@@ -181,10 +188,10 @@
             </ul>
             <ul class="design">
                 <li class="design__item">
-                    Designed by ThemeFire
+                    Designed by&nbsp;ThemeFire
                 </li>
                 <li class="design__item">
-                    Only on Envato Market
+                    Only on&nbsp;Envato Market
                 </li>
             </ul>
         </footer>
