--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="source/css/style.css" rel="stylesheet">
     </head>
     <body>
         <header class="page-header bg-secondary">
@@ -142,7 +142,7 @@
                     saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
                 </p>
             </div>
-            <img class="center-block" src="images/browser-center-img.jpg">
+            <img class="center-block" src="source/images/browser-center-img.jpg">
             <div class="slider__item"></div>
             <div class="slider__item"></div>
             <div class="slider__item"></div>
@@ -171,32 +171,32 @@
             </div>
             <div class="d-flex flex-wrap justify-content-center projects__wrapper">
             <div class="col-sm-2 card-body projects__item">
-                <img class="card-img-top projects__item-img" src="images/projects-item-1-img.jpg">
+                <img class="card-img-top projects__item-img" src="source/images/projects-item-1-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Claritas Etiam Processus</h3>
                 <p class="card-text text-center projects__item-text">Photography, Nature</p>
             </div>
             <div class="col-sm-2 card-body projects__item">
-                <img class="card-img-top projects__item-img" src="images/projects-item-2-img.jpg">
+                <img class="card-img-top projects__item-img" src="source/images/projects-item-2-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Quam Nutamus Farum</h3>
                 <p class="card-text text-center projects__item-text">Graphic Design, Mock-Up</p>
             </div>
             <div class="col-sm-2 card-body projects__item">
-                <img class="card-img-top projects__item-img" src="images/projects-item-3-img.jpg">
+                <img class="card-img-top projects__item-img" src="source/images/projects-item-3-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Usus Legentis Videntur</h3>
                 <p class="card-text text-center projects__item-text">Photography, Holiday</p>
             </div>
             <div class="col-sm-2 card-body projects__item">
-                <img class="card-img-top projects__item-img" src="images/projects-item-4-img.jpg">
+                <img class="card-img-top projects__item-img" src="source/images/projects-item-4-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Claritas Etiam Processus</h3>
                 <p class="card-text text-center projects__item-text">Photography, Nature</p>
             </div>
             <div class="col-sm-2 card-body projects__item">
-                <img class="card-img-top projects__item-img" src="images/projects-item-5-img.jpg">
+                <img class="card-img-top projects__item-img" src="source/images/projects-item-5-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Quam Nutamus Farum</h3>
                 <p class="card-text text-center projects__item-text">Graphic Design, Mock-Up</p>
             </div>
             <div class="col-sm-2 card-body projects__item">
-                <img class="card-img-top projects__item-img" src="images/projects-item-6-img.jpg">
+                <img class="card-img-top projects__item-img" src="source/images/projects-item-6-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Usus Legehntis Videntur</h3>
                 <p class="card-text text-center projects__item-text">Photography, Holiday</p>
             </div>
@@ -217,7 +217,7 @@
         </div>
         <div class="mobile container d-flex flex-row">
             <div class="mobile__img">
-                <img src="images/mobile-img.jpg">
+                <img src="source/images/mobile-img.jpg">
             </div>
             <div class="mobile__text">
                 <h1 class="mobile__title">Excellent for Mobile Devices.</h1>
@@ -246,27 +246,27 @@
         </div>
         <div class="statistics d-flex justify-content-around bg-secondary">
             <div class="statistics__item">
-                <img class="statistics__item-img" src="images/icon-people.svg">
+                <img class="statistics__item-img" src="source/images/icon-people.svg">
                 <p class="statistics__item-num">3587</p>
                 <p class="statistics__item-text">Satisfied Clients</p>
             </div>
             <div class="statistics__item">
-                <img class="statistics__item-img" src="images/icon-cup.svg">
+                <img class="statistics__item-img" src="source/images/icon-cup.svg">
                 <p class="statistics__item-num">207</p>
                 <p class="statistics__item-text">Cups of&nbsp;coffee</p>
             </div>
             <div class="statistics__item">
-                <img class="statistics__item-img" src="images/icon-chat.svg">
+                <img class="statistics__item-img" src="source/images/icon-chat.svg">
                 <p class="statistics__item-num">2500</p>
                 <p class="statistics__item-text">Blog posts</p>
             </div>
             <div class="statistics__item">
-                <img class="statistics__item-img" src="images/icon-heart.svg">
+                <img class="statistics__item-img" src="source/images/icon-heart.svg">
                 <p class="statistics__item-num">873</p>
                 <p class="statistics__item-text">Likes</p>
             </div>
             <div class="statistics__item">
-                <img class="statistics__item-img" src="images/icon-dish.svg">
+                <img class="statistics__item-img" src="source/images/icon-dish.svg">
                 <p class="statistics__item-num">900</p>
                 <p class="statistics__item-text">We&nbsp;launched</p>
             </div>
@@ -280,7 +280,7 @@
             </div>
             <div class="d-flex d-flex justify-content-around recent__row">
             <div class="card post">
-                <img class="card-img-top post__img" src="images/recent-post-1-img.jpg">
+                <img class="card-img-top post__img" src="source/images/recent-post-1-img.jpg">
                 <div class="card-body post__body">
                     <h5 class="card-title post__title">Lorem ipsum dolor sit amet</h5>
                     <p class="card-text post__text">
@@ -290,7 +290,7 @@
                 </div>
             </div>
             <div class="card post">
-                <img class="card-img-top post__img" src="images/recent-post-2-img.jpg">
+                <img class="card-img-top post__img" src="source/images/recent-post-2-img.jpg">
                 <div class="card-body post__body">
                     <h5 class="card-title post__title">Lorem ipsum dolor sit amet</h5>
                     <p class="card-text post__text">
@@ -300,7 +300,7 @@
                 </div>
             </div>
             <div class="card post">
-                <img class="card-img-top post__img" src="images/recent-post-3-img.jpg">
+                <img class="card-img-top post__img" src="source/images/recent-post-3-img.jpg">
                 <div class="card-body post__body">
                     <h5 class="card-title post__title">Lorem ipsum dolor sit amet</h5>
                     <p class="card-text post__text">
@@ -313,23 +313,23 @@
     </div>
         <div class="clients d-flex justify-content-around bg-dark">
             <div class="clients__logo">
-                <img src="images/icon-client-logo-1.svg">
+                <img src="source/images/icon-client-logo-1.svg">
             </div>
             <div class="clients__logo">
-                <img src="images/icon-client-logo-2.svg">
+                <img src="source/images/icon-client-logo-2.svg">
             </div>
             <div class="clients__logo">
-                <img src="images/icon-client-logo-3.svg">
+                <img src="source/images/icon-client-logo-3.svg">
             </div>
             <div class="clients__logo">
-                <img src="images/icon-client-logo-4.svg">
+                <img src="source/images/icon-client-logo-4.svg">
             </div>
         </div>
         <div class="social d-flex">
             <div class="company flex-fill">
                 <div class="company__logo">
-                    <img class="company__logo-img" src="images/icon-logo.svg">
-                    <img class="company__logo-trademark" src="images/icon-trademark.svg">
+                    <img class="company__logo-img" src="source/images/icon-logo.svg">
+                    <img class="company__logo-trademark" src="source/images/icon-trademark.svg">
                 </div>
                 <div class="company__text">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
@@ -397,10 +397,10 @@
             <div class="widget flex-fill">
                 <h2 class="widget__title">Dribbble Widget</h2>
                 <div class="widget__wrapper d-flex">
-                <img class="widget__img" src="images/widget-photo-1-img.jpg">
-                <img class="widget__img" src="images/widget-photo-2-img.jpg">
-                <img class="widget__img" src="images/widget-photo-3-img.jpg">
-                <img class="widget__img" src="images/widget-photo-4-img.jpg">
+                <img class="widget__img" src="source/images/widget-photo-1-img.jpg">
+                <img class="widget__img" src="source/images/widget-photo-2-img.jpg">
+                <img class="widget__img" src="source/images/widget-photo-3-img.jpg">
+                <img class="widget__img" src="source/images/widget-photo-4-img.jpg">
                 </div>
             </div>
         </div>
