--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     Nam liber tempor cum soluta nobis eleifend option congue nihil 
                     imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
                 </p>
-                <div class="sample__button center-block">
+                <div class="sample__button d-flex justify-content-center">
                     <button type="button" class="btn center-block sample__button-link">Get Started</button>
                 </div>
             </div>
@@ -169,41 +169,43 @@
                 <div class="category-item">Illustration</div>
                 <div class="category-item">Photography</div>
             </div>
-            <div class="d-flex flex-wrap justify-content-center projects__wrapper">
-            <div class="col-sm-2 card-body projects__item">
+            <div class="d-flex  flex-wrap justify-content-center projects__wrapper">
+            <div class="col-sm-4 card-body projects__item">
                 <img class="card-img-top projects__item-img" src="source/images/projects-item-1-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Claritas Etiam Processus</h3>
                 <p class="card-text text-center projects__item-text">Photography, Nature</p>
             </div>
-            <div class="col-sm-2 card-body projects__item">
+            <div class="col-sm-4 card-body projects__item">
                 <img class="card-img-top projects__item-img" src="source/images/projects-item-2-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Quam Nutamus Farum</h3>
                 <p class="card-text text-center projects__item-text">Graphic Design, Mock-Up</p>
             </div>
-            <div class="col-sm-2 card-body projects__item">
+            <div class="col-sm-4 card-body projects__item">
                 <img class="card-img-top projects__item-img" src="source/images/projects-item-3-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Usus Legentis Videntur</h3>
                 <p class="card-text text-center projects__item-text">Photography, Holiday</p>
             </div>
-            <div class="col-sm-2 card-body projects__item">
+            <div class="col-sm-4 card-body projects__item">
                 <img class="card-img-top projects__item-img" src="source/images/projects-item-4-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Claritas Etiam Processus</h3>
                 <p class="card-text text-center projects__item-text">Photography, Nature</p>
             </div>
-            <div class="col-sm-2 card-body projects__item">
+            <div class="col-sm-4 card-body projects__item">
                 <img class="card-img-top projects__item-img" src="source/images/projects-item-5-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Quam Nutamus Farum</h3>
                 <p class="card-text text-center projects__item-text">Graphic Design, Mock-Up</p>
             </div>
-            <div class="col-sm-2 card-body projects__item">
+            <div class="col-sm-4 card-body projects__item">
                 <img class="card-img-top projects__item-img" src="source/images/projects-item-6-img.jpg">
                 <h3 class="h3 card-title text-center project__item-title">Usus Legehntis Videntur</h3>
                 <p class="card-text text-center projects__item-text">Photography, Holiday</p>
             </div>
             </div>
-            <div type="button" class="btn button">Load More</div>
+            <div class="button d-flex justify-content-center">
+                <button type="button" href="#" class="button__link">Load More</button>
+            </div>
         </div>
-        <div class="promo bg-dark">
+        <div class="promo" style="background: url(source/images/promo-img.jpg)">
             <div class="promo__button text-center">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="70" height="70" viewBox="0 0 70 70"><defs><path id="gi8ca" d="M955.93 3685.82a2.06 2.06 0 0 1-2.06-2.06v-29.53a2.06 2.06 0 0 1 3.38-1.58l17.72 14.77a2.06 2.06 0 0 1 0 3.16l-17.72 14.76c-.37.32-.84.48-1.32.48zm2.06-27.19v20.73l12.44-10.36zm2.95 45.37a34.8 34.8 0 0 1-17.1-4.47 2.06 2.06 0 1 1 2.01-3.6 30.99 30.99 0 0 0 37-5.08 30.93 30.93 0 0 0 0-43.7 30.93 30.93 0 0 0-43.7 0 30.93 30.93 0 0 0 0 43.7 2.06 2.06 0 0 1-2.91 2.9 35.06 35.06 0 0 1 0-49.51 35.06 35.06 0 0 1 49.52 0 35.06 35.06 0 0 1 0 49.52 35.1 35.1 0 0 1-24.82 10.24z"/></defs><g><g transform="translate(-926 -3634)"><use xlink:href="#gi8ca"/><use fill="#fff" xlink:href="#gi8ca"/></g></g></svg>
             </div>
@@ -311,7 +313,7 @@
             </div>
         </div>
     </div>
-        <div class="clients d-flex justify-content-around bg-dark">
+        <div class="clients d-flex justify-content-around" style="background: url(source/images/clients-bg.jpg)">
             <div class="clients__logo">
                 <img src="source/images/icon-client-logo-1.svg">
             </div>
@@ -325,8 +327,8 @@
                 <img src="source/images/icon-client-logo-4.svg">
             </div>
         </div>
-        <div class="social d-flex">
-            <div class="company flex-fill">
+        <div class="social d-flex flex-fill">
+            <div class="company">
                 <div class="company__logo">
                     <img class="company__logo-img" src="source/images/icon-logo.svg">
                     <img class="company__logo-trademark" src="source/images/icon-trademark.svg">
@@ -339,7 +341,7 @@
                 </div>
                 <a class="company__button">Read More</a>
             </div>
-            <div class="posts flex-fill">
+            <div class="posts">
                 <h2 class="posts__title">Recent Posts</h2>
                 <div class="posts__item">
                     <p class="posts__item-date">
@@ -366,7 +368,7 @@
                     </p>
                 </div>
             </div>
-            <div class="twitter flex-fill">
+            <div class="twitter">
                 <h2 class="twitter__title">Our Twitter</h2>
                 <div class="twitter__post">
                     <p class="twitter__post-text">
@@ -394,13 +396,13 @@
                     </p>
                 </div>
             </div>
-            <div class="widget flex-fill">
+            <div class="widget">
                 <h2 class="widget__title">Dribbble Widget</h2>
-                <div class="widget__wrapper d-flex">
-                <img class="widget__img" src="source/images/widget-photo-1-img.jpg">
-                <img class="widget__img" src="source/images/widget-photo-2-img.jpg">
-                <img class="widget__img" src="source/images/widget-photo-3-img.jpg">
-                <img class="widget__img" src="source/images/widget-photo-4-img.jpg">
+                <div class="widget__wrapper d-flex flex-wrap">
+                <img class="widget__img col-sm-6" src="source/images/widget-photo-1-img.jpg">
+                <img class="widget__img col-sm-6" src="source/images/widget-photo-2-img.jpg">
+                <img class="widget__img col-sm-6" src="source/images/widget-photo-3-img.jpg">
+                <img class="widget__img col-sm-6" src="source/images/widget-photo-4-img.jpg">
                 </div>
             </div>
         </div>
