--- a/index.html
+++ b/index.html
@@ -11,68 +11,54 @@
         <link href="source/css/style.css" rel="stylesheet">
     </head>
     <body>
-        <header class="page-header bg-secondary">
-            <div class="logo d-flex">
-                <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" 
-                        xmlns:xlink="http://www.w3.org/1999/xlink" width="64" height="56"
-                         viewBox="0 0 64 56"><defs><path id="i82aa" d="M407.85 59.9l-5.25-9.19h10.5zm-1.31.77h-10.5l5.25-9.19zm2.63 0l5.25-9.19 5.26 9.2zm10.5 1.53l-5.25 9.19-5.25-9.19zm-13.13 0l-5.25 9.19-5.26-9.19zm-11.82.77l5.25 9.18h-10.5zm21.02 9.18l5.25-9.18 5.25 9.18zm-2.63-22.97H402.6l5.25-9.19zm2.63 24.5h10.5l-5.25 9.2zm-26.28 0h10.51l-5.25 9.2zm-1.3.77l5.24 9.2h-10.5zm34.14 9.2l5.26-9.2 5.25 9.2zm10.51 1.52l-5.25 9.19-5.26-9.19zm-13.13 0l-5.26 9.19-5.25-9.19zm-36.78 0h10.5l-5.25 9.19zm-1.32.77l5.26 9.19h-10.5zm26.27 0l5.26 9.19H402.6zm13.14 0l5.25 9.19h-10.5zm18.39 9.19h-10.5l5.25-9.2z"/>
-                        </defs><g><g transform="translate(-376 -40)"><use xlink:href="#i82aa"/><use fill="#fff" xlink:href="#i82aa"/></g></g></svg>
-                </a>
+        <header class="page-header d-flex bg-secondary">
+            <div class="logo">
+              <a class="logo__img" href="#">
+                <img src="source/images/icon-logo.svg">
+              </a>
                 <div class="logo__trademark">
                     <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="115" height="26" viewBox="0 0 115 26">
-                            <g><g transform="translate(-442 -55)"><g fill="#fff" font-family="'Raleway','Raleway-Regular'" font-size="34" font-weight="400"><text dominant-baseline="text-before-edge" font-family="Helvetica, Arial, sans-serif" transform="translate(442 55)"><tspan letter-spacing="-1.36" style="font-kerning:normal">Waxom</tspan></text></g></g></g></svg>
+                      <img src="source/images/icon-trademark.svg">
                     </a>
                 </div>
             </div>
-            <ul class="menu list-inline d-flex flex-row justify-content-end">
-                <li class="menu__item">
-                    <a href="#">Home</a>
+            <ul class="menu">
+                <li class="menu__item" >
+                    <a class="menu__item-link" href="#">Home</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#">About&nbsp;Us</a>
+                    <a class="menu__item-link" href="#">About&nbsp;Us</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#">Portfolio</a>
+                    <a class="menu__item-link" href="#">Portfolio</a>
+                </li>
+                <li class="menu__item" >
+                    <a class="menu__item-link" href="#">Features</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#">Features</a>
+                    <a class="menu__item-link" href="#">Blog</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#">Blog</a>
+                    <a class="menu__item-link" href="#">Pricing</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#">Pricing</a>
+                    <a class="menu__item-link" href="#">Shortcodes</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#">Shortcodes</a>
+                    <a class="menu__item-link" href="#">Contact</a>
                 </li>
                 <li class="menu__item">
-                    <a href="#">Contact</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#" a-label="Cart">
+                    <a class="menu__item-link" href="#" a-label="Cart">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18" height="24" viewBox="0 0 18 24"><defs><path id="vif1a" d="M1494 61v15a3 3 0 0 1-3 3h-12a3 3 0 0 1-3-3V61a3 3 0 0 1 3-3h1.5c0-1.66 2.01-3 4.5-3 2.48 0 4.5 1.34 4.5 3h1.5a3 3 0 0 1 3 3zm-12-3h6c0-1.04-1.34-1.5-3-1.5s-3 .46-3 1.5zm10.5 16.5h-15V76c0 .82.67 1.5 1.5 1.5h12c.82 0 1.5-.68 1.5-1.5zm0-13.5c0-.83-.68-1.5-1.5-1.5h-1.5V64h-1.5v-4.5h-6V64h-1.5v-4.5h-1.5c-.83 0-1.5.67-1.5 1.5v12h15z"/></defs><g><g transform="translate(-1476 -55)"><use xlink:href="#vif1a"/><use fill="#fff" xlink:href="#vif1a"/></g></g></svg>
                     </a>
                 </li>
                 <li class="menu__item">
-                    <a href="#" aria-label="Search">
+                    <a class="menu__item-link" href="#" aria-label="Search">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24"><defs><path id="ufswa" d="M1545.76 78.76c-.3.3-.8.3-1.1 0l-6.21-6.12a10.15 10.15 0 0 1-6.36 2.22c-5.57 0-10.09-4.44-10.09-9.93 0-5.49 4.52-9.93 10.1-9.93 5.57 0 10.09 4.44 10.09 9.93 0 2.56-1 4.9-2.62 6.66l6.2 6.1c.3.29.3.77 0 1.07zm-5.13-13.83c0-4.64-3.82-8.4-8.54-8.4a8.47 8.47 0 0 0-8.54 8.4c0 4.64 3.83 8.4 8.54 8.4a8.47 8.47 0 0 0 8.54-8.4z"/></defs><g><g transform="translate(-1522 -55)"><use xlink:href="#ufswa"/><use fill="#fff" xlink:href="#ufswa"/></g></g></svg>
                     </a>
                 </li>
             </ul>
-            <div class="sample">
-                <h1 class="sample__title h1 text-center">Portfolio PSD Template</h1>
-                <h2 class="sample__tagline h2 text-center">Unique and Modern Design</h2>
-                <p class="sample__text text-center">
-                    Nam liber tempor cum soluta nobis eleifend option congue nihil 
-                    imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
-                </p>
-                <div class="sample__button d-flex justify-content-center">
-                    <button type="button" class="sample__button-link btn center-block">Get Started</button>
-                </div>
-            </div>
+
             <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -100,6 +86,17 @@
                     </a>
                   </div> -->
         </header>
+        <div class="sample">
+          <h1 class="sample__title h1 text-center">Portfolio PSD Template</h1>
+          <h2 class="sample__tagline h2 text-center">Unique and Modern Design</h2>
+          <p class="sample__text text-center">
+            Nam liber tempor cum soluta nobis eleifend option congue nihil
+            imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
+          </p>
+          <div class="sample__button d-flex justify-content-center">
+            <button type="button" class="sample__button-link btn center-block">Get Started</button>
+          </div>
+        </div>
         <div class="features container d-flex flex-row">
             <div class="advantage d-flex flex-column align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="49" height="49" viewBox="0 0 49 49"><defs><path id="ouhda" d="M534.67 1123.72l-14.27 14.27-32.87 14.47 14.48-32.87 14.27-14.26a1.59 1.59 0 1 1 2.25 2.25l-13.85 13.84-8.57 19.47 3 3 19.46-8.58 13.85-13.84a1.59 1.59 0 1 1 2.25 2.25zm-20.17 6.5l13.33-13.34a1.59 1.59 0 1 1 2.25 2.25l-13.33 13.34a1.6 1.6 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25zm-3.48-3.49l13.33-13.33a1.59 1.59 0 1 1 2.25 2.25L513.26 1129a1.6 1.6 0 0 1-2.24-2.26zm-3.49-3.48l13.34-13.33a1.59 1.59 0 1 1 2.25 2.25l-13.34 13.33a1.59 1.59 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25z"/></defs><g><g transform="translate(-487 -1104)"><use xlink:href="#ouhda"/><use fill="#555" xlink:href="#ouhda"/></g></g></svg>                   
