wrapper was added to header block

--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
         <link href="source/css/style.css" rel="stylesheet">
     </head>
     <body>
-        <header class="page-header d-flex bg-secondary">
+        <header class="page-header bg-secondary">
+          <div class="container d-flex">
             <div class="logo">
               <a class="logo__img" href="#">
                 <img src="source/images/icon-logo.svg">
               </a>
                 <div class="logo__trademark">
-                    <a href="#">
-                      <img src="source/images/icon-trademark.svg">
-                    </a>
+                    <a class="logo__trademark-link" href="#">Waxom</a>
                 </div>
             </div>
             <ul class="menu">
@@ -85,6 +84,7 @@
                       <span class="sr-only">Next</span>
                     </a>
                   </div> -->
+          </div>
         </header>
         <div class="sample">
           <h1 class="sample__title h1 text-center">Portfolio PSD Template</h1>
