--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <link href="source/css/style.css" rel="stylesheet">
     </head>
     <body>
-        <header class="page-header bg-secondary">
-          <div class="container d-flex">
+        <header class="page-header">
+          <div class="container">
             <div class="logo">
               <a class="logo__img" href="#">
                 <img src="source/images/icon-logo.svg">
@@ -57,36 +57,10 @@
                     </a>
                 </li>
             </ul>
-
-            <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="images/browser-left-img.jpg" alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/browser-center-img.jpg" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/browser-right-img.jpg" alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div> -->
           </div>
         </header>
         <div class="sample">
+          <div class="container">
           <h1 class="sample__title h1 text-center">Portfolio PSD Template</h1>
           <h2 class="sample__tagline h2 text-center">Unique and Modern Design</h2>
           <p class="sample__text text-center">
@@ -95,6 +69,7 @@
           </p>
           <div class="sample__button d-flex justify-content-center">
             <button type="button" class="sample__button-link btn center-block">Get Started</button>
+          </div>
           </div>
         </div>
         <div class="features container d-flex flex-row">
