--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Waxom. Portfolio PSD Template</title>
-        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
-        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
+        <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick.css"/>
+        <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick-theme.css"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
         <link href="source/css/style.css" rel="stylesheet">
     </head>
     <body>
         <header class="page-header">
-          <div class="container">
+          <div class="container-fluid">
             <div class="logo">
               <a class="logo__img" href="#">
                 <img src="source/images/icon-logo.svg">
@@ -66,7 +66,16 @@
           <p class="sample__text text-center">
             Nam liber tempor cum soluta nobis eleifend option congue nihil
             imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
-          </p>
+          </p>  
+           <!--<div class="sample__item">-->
+             <!--<img src="source/images/header-bg.jpg">-->
+           <!--</div>-->
+            <!--<div class="sample__item">-->
+              <!--<img src="source/images/header-bg.jpg">-->
+            <!--</div>-->
+            <!--<div class="sample__item">-->
+              <!--<img src="source/images/header-bg.jpg">-->
+            <!--</div>-->
           <div class="sample__button d-flex justify-content-center">
             <button type="button" class="sample__button-link btn center-block">Get Started</button>
           </div>
@@ -405,6 +414,15 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="source/carousel/slick/slick.min.js"></script>
+        <script type="text/javascript">
+          $(document).ready(function(){
+            $('.sample').slick({
+              setting: value, setting: name
+          })
+          });
+        </script>
     </body>
 </html>
