--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick-theme.css"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="source/css/style.css" rel="stylesheet">
     </head>
     <body>
@@ -61,8 +64,8 @@
         </header>
         <div class="sample">
           <div class="container">
-          <h1 class="sample__title h1 text-center">Portfolio PSD Template</h1>
-          <h2 class="sample__tagline h2 text-center">Unique and Modern Design</h2>
+          <h1 class="sample__title h1 text-center">Unique and Modern Design</h1>
+          <h2 class="sample__tagline h2 text-center">Portfolio PSD Template</h2>
           <p class="sample__text text-center">
             Nam liber tempor cum soluta nobis eleifend option congue nihil
             imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
