--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                 </li>
                 <li class="menu__item">
                     <a class="menu__item-link" href="#" a-label="Cart">
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18" height="24" viewBox="0 0 18 24"><defs><path id="vif1a" d="M1494 61v15a3 3 0 0 1-3 3h-12a3 3 0 0 1-3-3V61a3 3 0 0 1 3-3h1.5c0-1.66 2.01-3 4.5-3 2.48 0 4.5 1.34 4.5 3h1.5a3 3 0 0 1 3 3zm-12-3h6c0-1.04-1.34-1.5-3-1.5s-3 .46-3 1.5zm10.5 16.5h-15V76c0 .82.67 1.5 1.5 1.5h12c.82 0 1.5-.68 1.5-1.5zm0-13.5c0-.83-.68-1.5-1.5-1.5h-1.5V64h-1.5v-4.5h-6V64h-1.5v-4.5h-1.5c-.83 0-1.5.67-1.5 1.5v12h15z"/></defs><g><g transform="translate(-1476 -55)"><use xlink:href="#vif1a"/><use fill="#fff" xlink:href="#vif1a"/></g></g></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18" height="24" viewBox="0 0 18 24"><defs><path id="vif1a" d="M1494 61v15a3 3 0 0 1-3 3h-12a3 3 0 0 1-3-3V61a3 3 0 0 1 3-3h1.5c0-1.66 2.01-3 4.5-3 2.48 0 4.5 1.34 4.5 3h1.5a3 3 0 0 1 3 3zm-12-3h6c0-1.04-1.34-1.5-3-1.5s-3 .46-3 1.5zm10.5 16.5h-15V76c0 .82.67 1.5 1.5 1.5h12c.82 0 1.5-.68 1.5-1.5zm0-13.5c0-.83-.68-1.5-1.5-1.5h-1.5V64h-1.5v-4.5h-6V64h-1.5v-4.5h-1.5c-.83 0-1.5.67-1.5 1.5v12h15z"/></defs><g><g transform="translate(-1476 -55)"><use xlink:href="#vif1a"/><use  xlink:href="#vif1a"/></g></g></svg>
                     </a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__item-link" href="#" aria-label="Search">
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24"><defs><path id="ufswa" d="M1545.76 78.76c-.3.3-.8.3-1.1 0l-6.21-6.12a10.15 10.15 0 0 1-6.36 2.22c-5.57 0-10.09-4.44-10.09-9.93 0-5.49 4.52-9.93 10.1-9.93 5.57 0 10.09 4.44 10.09 9.93 0 2.56-1 4.9-2.62 6.66l6.2 6.1c.3.29.3.77 0 1.07zm-5.13-13.83c0-4.64-3.82-8.4-8.54-8.4a8.47 8.47 0 0 0-8.54 8.4c0 4.64 3.83 8.4 8.54 8.4a8.47 8.47 0 0 0 8.54-8.4z"/></defs><g><g transform="translate(-1522 -55)"><use xlink:href="#ufswa"/><use fill="#fff" xlink:href="#ufswa"/></g></g></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24"><defs><path id="ufswa" d="M1545.76 78.76c-.3.3-.8.3-1.1 0l-6.21-6.12a10.15 10.15 0 0 1-6.36 2.22c-5.57 0-10.09-4.44-10.09-9.93 0-5.49 4.52-9.93 10.1-9.93 5.57 0 10.09 4.44 10.09 9.93 0 2.56-1 4.9-2.62 6.66l6.2 6.1c.3.29.3.77 0 1.07zm-5.13-13.83c0-4.64-3.82-8.4-8.54-8.4a8.47 8.47 0 0 0-8.54 8.4c0 4.64 3.83 8.4 8.54 8.4a8.47 8.47 0 0 0 8.54-8.4z"/></defs><g><g transform="translate(-1522 -55)"><use xlink:href="#ufswa"/><use  xlink:href="#ufswa"/></g></g></svg>
                     </a>
                 </li>
             </ul>
