additional styles for page-header container were added using bootstrap classes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header class="page-header">
-          <div class="container-fluid">
+          <div class="container-fluid d-flex align-items-center">
             <div class="logo">
               <a class="logo__img" href="#">
                 <img src="source/images/icon-logo.svg">
